--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Vue</title>
-    <script src="https://unpkg.com/vue@3.0.2"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Learning Vue</title>
+  <script src="https://unpkg.com/vue@3.0.2"></script>
 </head>
 <body>
-      <h1>Hello, Vue </h1>
+  <h1>Hello, Vue :)</h1>
+
+  <div id="app">
+    <div v-if="showBooks">
+      <p>{{ title }} - by {{ author }}, {{ age }} years old</p>
+    </div>
+    <div v-else>
+      <p>Click the button below to show books</p>
+    </div>
+    
+    <button @click="toggleShowBooks">
+      <!-- Toggle books -->
+      <span v-if="showBooks">Hide books</span>
+      <span v-else>Show books</span>
+    </button>
+
+    <div v-show="showBooks">currently showing books</div>
+  </div>
+
 
   <script src="app.js"></script>
 </body>
