--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Vue</title>
-    <script src="https://unpkg.com/vue@3.0.2"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Learning Vue</title>
+  <script src="https://unpkg.com/vue@3.0.2"></script>
+  <style>
+    .box {
+      padding: 100px 0;
+      width: 400px;
+      text-align: center;
+      background: #ddd;
+      margin: 20px;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
-      <h1>Hello, Vue </h1>
+  <h1>Hello, Vue :)</h1>
+
+  <div id="app">
+    <!-- attribute binding -->
+    <!-- <a v-bind:href="url">Best website ever!</a> -->
+    <a :href="url">Best website ever!</a>
+
+    <div v-if="showBooks">
+      <ul>
+        <li v-for="book in books">
+          <img :src="book.img" :alt="book.title">
+          <h3>{{ book.title }}</h3>
+          <p>{{ book.author }}</p>
+        </li>
+      </ul>
+    </div>
+    <div v-else>
+      <p>Click the button below to show books</p>
+    </div>
+    
+    <button @click="toggleShowBooks">
+      <span v-if="showBooks">Hide books</span>
+      <span v-else>Show books</span>
+    </button>
+  </div>
+
 
   <script src="app.js"></script>
 </body>
